# leonardo

./: CMakeLists.txt  README.md  ardrone_bottom.yaml  package.xml
launch/: ardrone.launch
src/: controller.cpp  controller_node.cpp  localization_node.cpp  localizator.cpp  navigator.cpp  odometry_node.cpp  path_planner_node.cpp  teleop_node.cpp  tracker.cpp  utils.h
src/detector/: detector.h  main.cpp  simple_detector.cpp  simple_detector.h
